--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
+
+REACT_APP_NOMINATIM_URL=https://nominatim.openstreetmap.org/search
+REACT_APP_NOMINATIME_URL_REVERSE=https://nominatim.openstreetmap.org/reverse
+
+REACT_APP_VALHALLA_OSM_URL=https://valhalla.georepublic.net
