--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm i --legacy-peer-deps
 
       - name: Build site
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
