map defaults in ENV
Signed-off-by: Daniel Kastl <daniel@georepublic.de>

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ REACT_APP_NOMINATIM_URL=https://nominatim.openstreetmap.org/search
 REACT_APP_NOMINATIME_URL_REVERSE=https://nominatim.openstreetmap.org/reverse
 
 REACT_APP_VALHALLA_OSM_URL=https://valhalla.georepublic.net
+
+REACT_APP_MAP_DEFAULT_LAT=34.7256
+REACT_APP_MAP_DEFAULT_LON=135.2597
+REACT_APP_MAP_DEFAULT_ZOOM=12
